--- a/NLP_EE.ipynb
+++ b/NLP_EE.ipynb
@@ -4056,11 +4056,7 @@
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "text = \"Please pay the total amount of Rs 120, which includes the invoice amount of Rs 100 and tax of Rs 10, for Invoice Number INV-12345 dated 20 July 2024, to Siva & Co. The payment should be made to account number 12345678 at ABC Bank, Chennai.\"\n",
-    "#text = \"Please see the attached Invoice Number INV-67890 dated 15 August 2024. The total amount due is $ 150, which includes the invoice amount of $ 130 and tax of $ 20. The payment is due by 30 August 2024\"\n",
-    "#text = \"The attached invoice amount of 100, with a tax amount of 10, making the total amount 120. Please make the payment to Siva & Co. using account number 12345678 at ABC Bank, Chennai\""
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -4211,7 +4207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -5736,9 +5732,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invoice Number: invoice\n",
+      "invoice: pay\n"
+     ]
+    }
+   ],
    "source": [
     "from sentence_transformers import SentenceTransformer, util\n",
     "import re\n",
@@ -5769,7 +5774,7 @@
     "def extract_entity(sentence, target_phrases, word_embeddings, model):\n",
     "    # Compute sentence embedding\n",
     "    sentence_embedding = model.encode(sentence)\n",
-    "    \n",
+    "    T = 0.\n",
     "    # Compute similarity for each target phrase\n",
     "    similarities = {}\n",
     "    for phrase, target_embedding in target_embeddings.items():\n",
@@ -5779,10 +5784,10 @@
     "    # Extract entities based on similarity scores\n",
     "    extracted_entities = {}\n",
     "    for phrase, similarity in similarities.items():\n",
-    "        if similarity > 0.7:  # Threshold for similarity (can be adjusted)\n",
+    "        if similarity > T:  # Threshold for similarity (can be adjusted)\n",
     "            for word, word_embedding in word_embeddings.items():\n",
     "                word_sim = util.pytorch_cos_sim(target_embeddings[phrase], word_embedding).item()\n",
-    "                if word_sim > 0:\n",
+    "                if word_sim > T:\n",
     "                    extracted_entities[phrase] = word\n",
     "                    break\n",
     "    \n",
@@ -5792,6 +5797,116 @@
     "extracted_entities = extract_entity(sentence, target_phrases, word_embeddings, model)\n",
     "\n",
     "# Print extracted entities\n",
+    "for entity, value in extracted_entities.items():\n",
+    "    print(f\"{entity}: {value}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sentence = \"Please pay the total amount of Rs 120, which includes the invoice amount of Rs 100 and tax of Rs 10, for Invoice Number INV-12345 dated 20 July 2024, to Siva & Co. The payment should be made to account number 12345678 at ABC Bank, Chennai.\"\n",
+    "#text = \"Please see the attached Invoice Number INV-67890 dated 15 August 2024. The total amount due is $ 150, which includes the invoice amount of $ 130 and tax of $ 20. The payment is due by 30 August 2024\"\n",
+    "#text = \"The attached invoice amount of 100, with a tax amount of 10, making the total amount 120. Please make the payment to Siva & Co. using account number 12345678 at ABC Bank, Chennai\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Invoice Number: INV-12345\n",
+      "Invoice Amount:  100\n",
+      "Tax Amount:  20\n",
+      "Total Amount:  120\n",
+      "Date: 20 July 2024\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sentence_transformers import SentenceTransformer, util\n",
+    "import re\n",
+    "\n",
+    "# Load pre-trained Sentence Transformer model\n",
+    "model = SentenceTransformer('all-MiniLM-L6-v2')\n",
+    "\n",
+    "# Example sentence\n",
+    "#sentence = \"Please pay the total amount of Rs 120, which includes the invoice amount of Rs 100 and tax of Rs 20, for Invoice Number INV-12345 dated 20 July 2024, to Siva & Co. The payment should be made to account number 12345678 at ABC Bank, Chennai.\"\n",
+    "\n",
+    "# Define the target phrases (the entities we want to extract)\n",
+    "target_phrases = {\n",
+    "    \"Invoice Number\": None,\n",
+    "    \"Invoice Amount\": None,\n",
+    "    \"Tax Amount\": None,\n",
+    "    \"Total Amount\": None,\n",
+    "    \"Date\": None\n",
+    "}\n",
+    "\n",
+    "# Tokenize the sentence\n",
+    "words = re.split(r'\\s+', sentence)  # Split by whitespace\n",
+    "\n",
+    "# Generate embeddings for each word/phrase in the sentence\n",
+    "word_embeddings = {word: model.encode(word) for word in words if word.strip()}\n",
+    "\n",
+    "# Generate embeddings for target phrases\n",
+    "target_embeddings = {phrase: model.encode(phrase) for phrase in target_phrases}\n",
+    "\n",
+    "# Function to find the closest match for each target entity\n",
+    "def find_best_matches(word_embeddings, target_embeddings):\n",
+    "    best_matches = {}\n",
+    "\n",
+    "    for target_phrase, target_embedding in target_embeddings.items():\n",
+    "        best_similarity = -1\n",
+    "        best_word = None\n",
+    "\n",
+    "        # Iterate over words and find the most similar one to the target phrase\n",
+    "        for word, word_embedding in word_embeddings.items():\n",
+    "            similarity = util.pytorch_cos_sim(target_embedding, word_embedding).item()\n",
+    "\n",
+    "            if similarity > best_similarity:\n",
+    "                best_similarity = similarity\n",
+    "                best_word = word\n",
+    "\n",
+    "        best_matches[target_phrase] = best_word\n",
+    "\n",
+    "    return best_matches\n",
+    "\n",
+    "# Extract entities\n",
+    "best_matches = find_best_matches(word_embeddings, target_embeddings)\n",
+    "\n",
+    "# Post-process to extract full entities\n",
+    "def post_process_matches(sentence, best_matches):\n",
+    "    extracted_entities = {}\n",
+    "\n",
+    "    # Regex patterns for matching different entities\n",
+    "    patterns = {\n",
+    "        \"Invoice Number\": r'\\bINV-\\d+\\b',\n",
+    "        \"Invoice Amount\": r'\\b[\\$€£₹]?\\s?\\d+(?:,\\d{3})*(?:\\.\\d{1,2})?\\b',\n",
+    "        \"Tax Amount\": r'\\b[\\$€£₹]?\\s?\\d+(?:,\\d{3})*(?:\\.\\d{1,2})?\\b',\n",
+    "        \"Total Amount\": r'\\b[\\$€£₹]?\\s?\\d+(?:,\\d{3})*(?:\\.\\d{1,2})?\\b',\n",
+    "        \"Date\": r\"\\b[0-9]{2}\\s[A-Za-z]{4}\\s[0-9]{4}\\b\",\n",
+    "    }\n",
+    "\n",
+    "    for entity, match in best_matches.items():\n",
+    "        if match:\n",
+    "            pattern = patterns[entity]\n",
+    "            # Look for the pattern in the sentence around the matched word\n",
+    "            match_span = re.search(rf'\\b{match}\\b.*?{pattern}', sentence)\n",
+    "            if match_span:\n",
+    "                extracted_entities[entity] = re.search(pattern, match_span.group()).group()\n",
+    "\n",
+    "    return extracted_entities\n",
+    "\n",
+    "# Post-process to extract full entities\n",
+    "extracted_entities = post_process_matches(sentence, best_matches)\n",
+    "\n",
+    "# Output the extracted entities\n",
     "for entity, value in extracted_entities.items():\n",
     "    print(f\"{entity}: {value}\")\n"
    ]
