--- a/NLP_EE.ipynb
+++ b/NLP_EE.ipynb
@@ -5803,29 +5803,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentence = \"Please pay the total amount of Rs 120, which includes the invoice amount of Rs 100 and tax of Rs 10, for Invoice Number INV-12345 dated 20 July 2024, to Siva & Co. The payment should be made to account number 12345678 at ABC Bank, Chennai.\"\n",
-    "#text = \"Please see the attached Invoice Number INV-67890 dated 15 August 2024. The total amount due is $ 150, which includes the invoice amount of $ 130 and tax of $ 20. The payment is due by 30 August 2024\"\n",
-    "#text = \"The attached invoice amount of 100, with a tax amount of 10, making the total amount 120. Please make the payment to Siva & Co. using account number 12345678 at ABC Bank, Chennai\""
+    "#sentence = \"Please pay the total amount of Rs 120, which includes the invoice amount of Rs 100 and tax of Rs 10, for Invoice Number INV-12345 dated 20 July 2024, to Siva & Co. The payment should be made to account number 12345678 at ABC Bank, Chennai.\"\n",
+    "#sentence = \"Please see the attached Invoice Number INV-67890 dated 15 August 2024. The total amount due is $ 150, which includes the invoice amount of $ 130 and tax of $ 20. The payment is due by 30 August 2024\"\n",
+    "sentence = \"The attached invoice amount of 100, with a tax amount of 10, making the total amount 120. Please make the payment to Siva & Co. using account number 12345678 at ABC Bank, Chennai\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Invoice Number: INV-12345\n",
       "Invoice Amount:  100\n",
-      "Tax Amount:  20\n",
-      "Total Amount:  120\n",
-      "Date: 20 July 2024\n"
+      "Tax Amount:  10\n",
+      "Total Amount:  100\n"
      ]
     }
    ],
